Creating muzakki
