# internal/delivery/http/dto/muzakki_dto.go
@@ -1,0 +1,27 @@
+package dto
+
+import "time"
+
+type CreateMuzakkiRequest struct {
+	Name        string `json:"name" binding:"required"`
+	PhoneNumber string `json:"phoneNumber" binding:"required"`
+	Address     string `json:"address" binding:"required"`
+	Notes       string `json:"notes"`
+}
+
+type UpdateMuzakkiRequest struct {
+	Name        string `json:"name" binding:"required"`
+	PhoneNumber string `json:"phoneNumber" binding:"required"`
+	Address     string `json:"address" binding:"required"`
+	Notes       string `json:"notes"`
+}
+
+type MuzakkiResponse struct {
+	ID          string    `json:"id"`
+	Name        string    `json:"name"`
+	PhoneNumber string    `json:"phoneNumber"`
+	Address     string    `json:"address"`
+	Notes       string    `json:"notes"`
+	CreatedAt   time.Time `json:"createdAt"`
+	UpdatedAt   time.Time `json:"updatedAt"`
+}
